# anticaptcha-db-scrape-demo

./: .env.example  .gitignore  README.md  pyproject.toml
dbscrape/: main.py  settings.py  utils.py
